--- a/src/List.scss
+++ b/src/List.scss
@@ -1,4 +1,5 @@
 @import './colors.scss';
+@import './_mixins.scss';
 
 .List {
   width: 250px;
@@ -7,4 +8,5 @@
   margin-right: 0.5em;
   padding: 0.5em;
   border: 1px solid darken($list-color, 10%);
+  @include box-shadow($list-color);
 }
