--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
-@import './_colors.scss';
-@import './_mixins.scss';
+@import './components/_colors.scss';
+@import './components/_mixins.scss';
 
 html, body, * {
   box-sizing: border-box;
